# hm7

./: alembic.ini  config.ini  my_select.py  pyproject.toml  seeds.py
alembic/: env.py  mymodel.py
migrations/: env.py
migrations/versions/: 75a7b563278a_init.py  8c70d4d5ca43_init.py  cd3bcaa053e2_init.py  d5b8a2653334_init.py  d7b2be0f5329_init.py
src/: crud.py  db.py  models.py
